langfuse/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langfuse-zookeeper
spec:
  type: ClusterIP
  selector:
    app: langfuse-zookeeper
  ports:
    - port: 2181
      targetPort: 2181
      name: client
